--- a/src/assets/components/body/yzMain.scss
+++ b/src/assets/components/body/yzMain.scss
@@ -29,6 +29,7 @@
     
     >ul{
         width: 100%;
+        margin-top: 20px;
 
         >li{
             width: 350px;
@@ -59,6 +60,63 @@
                 font-size: 20px;
                 font-weight: 700;
                 letter-spacing: 30px;
+                color: #222;
+            }
+            
+        }
+        
+    }
+    
+}
+
+.school{
+    width: 1190px;
+    margin: 70px auto;
+
+    >h2{
+        margin-top: 20px;
+        text-align: center;
+        letter-spacing: 10px;
+        font-size: 40px;
+        background: linear-gradient(to right,rgb(194, 176, 142) 3%,rgba(22,146,183,.85) 100%);
+        color: #fff;
+        border-radius: 40px;
+        padding: 10px 0;
+    }
+
+    >ul{
+        width: 100%;
+        margin-top: 20px;
+
+        >li{
+            width: 350px;
+            height: 280px;
+            display: inline-block;
+            margin: 20px;
+            text-align: center;
+
+            >img{
+                width: 350px;
+                height: 90%;
+                // border: 10px solid rgb(190, 164, 116);
+                border-radius: 20px;
+                padding: 1px;
+                margin-bottom: 10px;
+                cursor: pointer;
+            }
+
+            >img:hover{
+                transform: scale(1.2) ;
+                transition: transform 1s;
+            }
+            
+            >span{
+                display: flex;
+                justify-content: center;
+                padding-left: 30px;
+                font-size: 20px;
+                font-weight: 700;
+                letter-spacing: 10px;
                 color: #222;
             }
             
